@@ -161,7 +161,7 @@ Bug Fixes
 * SOLR-5577: Likely ZooKeeper expiration should not slow down updates a given
   amount, but instead cut off updates after a given time. 
   (Mark Miller, Christine Poerschke)
-  
+
 Optimizations
 ----------------------
 
@@ -299,6 +299,9 @@ Bug Fixes
 * SOLR-5588: PeerSync doesn't count all connect failures as success.
   (Mark Miller)
     
+* SOLR-5564: hl.maxAlternateFieldLength should apply to original field when
+  fallback is attempted (janhoy)
+
 Optimizations
 ----------------------
 
